<resources>
    <string name="app_name">Kravel</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">로그인 하기</string>
    <string name="signup">회원가입 하기</string>
    <string name="email">이메일 계정</string>
    <string name="pw">비밀번호</string>
    <string name="emailExplain">이메일을 입력해주세요.</string>
    <string name="pwExplain">비밀번호를 입력해주세요.</string>
    <string name="loginWord1">Kravel,</string>
    <string name="loginWord2">K-culture와
        \n함께 떠나는 한국 여행</string>
    <string name="loginFailTitle">로그인을 실패했습니다.</string>
    <string name="loginFailContent">가입하지 않은 아이디이거나,
        \n잘못된 비밀번호 입니다.</string>
    <string name="Retry">확인</string>
    <string name="signupWord1">Kravel과 함께</string>
    <string name="signupWord2">색다른</string>
    <string name="signupWord3">여행을 떠나볼까요?</string>
    <string name="pwCheck">비밀번호 확인</string>
    <string name="nickname">닉네임</string>
    <string name="gender">성별</string>
    <string name="man">남자</string>
    <string name="woman">여자</string>
    <string name="warningEmail">이메일 형식이 옳지 않습니다.</string>
    <string name="warningPw">6자리 이상 입력해주세요.</string>
    <string name="warningPwCheck">비밀번호가 같지 않습니다.</string>
    <string name="signokWelcome">환영합니다!</string>
    <string name="hintEmail">이메일을 입력해주세요.</string>
    <string name="hintPw">6자리 이상으로 입력해주세요.</string>
    <string name="hintPwCheck">다시 한 번 비밀번호를 입력해주세요.</string>
    <string name="hintNickname">사용할 닉네임을 7자 이하로 적어주세요.</string>
    <string name="signokWord1">K-culture과 함께 색다른 여행을 떠나는 서비스,</string>
    <string name="signokWord2">Kravel 입니다.</string>
    <string name="signokWord3">내가 좋아하는 아이돌이 다녀간 곳부터</string>
    <string name="signokWord4">요즘 인기 많은 드라마 촬영지까지!</string>
    <string name="signokWord5">멋진 인증샷과 함께 소중한 추억을</string>
    <string name="signokWord6">만들어 보아요!</string>
    <string name="signokFinish">여행 떠나기</string>
    <string name="mainWord1">당신의 한국 여행을</string>
    <string name="mainWord2">더 특별하게,</string>
    <string name="mainWord3">Kravel만의 장소를 둘러보세요.</string>
    <string name="homeNearPlace1">"나와 가까운 "</string>
    <string name="homeNearPlace2">Kravel</string>
    <string name="homeMoreBtn">더 보기</string>
    <string name="homePopularPlace1">"요즘 여기가 "</string>
    <string name="homePopularPlace2">인기 있어요!</string>
    <string name="homeNewPhotoReview1">"새롭게 올라온 "</string>
    <string name="homeNewPhotoReview2">포토 리뷰</string>
    <string name="NewPhotoReview">새로운 포토 리뷰</string>
    <string name="NearPlaceList">나와 가까운 Kravel</string>
    <string name="mapLocationTitle">위치</string>
    <string name="mapTransportTitle">대중교통</string>
    <string name="mapBusTitle">버스</string>
    <string name="mapSubwayTitle">지하철</string>
    <string name="mapAttractionTitle">주변 관광지</string>
    <string name="more">더보기</string>
    <string name="warningServiceWord1">서비스가 지원되는 지역이 아니예요.</string>
    <string name="warningServiceWord2">한국에서 만나요!</string>
    <string name="gpsWarningWord1">해당 기기에 gps가 꺼져있어 위치정보를 가져올 수 없습니다.\n gps를 사용하시겠습니까?</string>
    <string name="yes">예</string>
    <string name="no">아니오</string>
    <string name="mypageword">Kravel과 당신의 여행을 특별하게
        \n만들어보세요.</string>
    <string name="myPhotoReview">내 포토 리뷰</string>
    <string name="scrap">스크랩</string>
    <string name="updateUserInfo">내 정보 수정</string>
    <string name="updatePw">비밀번호 수정</string>
    <string name="setLanguage">언어 설정</string>
    <string name="report">제보하기</string>
    <string name="logout">로그아웃</string>
    <string name="cancel">취소</string>
    <string name="askLogout">정말 로그아웃 하시겠습니까?</string>
    <string name="currentPwTitle">본인 확인을 위해 비밀번호를 입력해주세요.</string>
    <string name="changePwTitle">변경할 비밀번호를 입력해주세요.</string>
    <string name="reportExplain">장소에 대한 설명이 자세할수록 업로드 될 확률이 높아요!</string>
    <string name="placeName">장소명</string>
    <string name="address">주소</string>
    <string name="addressContent">장소에 대한 설명</string>
    <string name="relatedTag">관련 태그</string>
    <string name="placePhoto">장소 및 인증샷 사진</string>
    <string name="placeNameExplain">예) 녹사평 육교</string>
    <string name="addressExplain">예 ) 녹사평대로 195 6호선 녹사평역</string>
    <string name="addressContentExplain">예) 녹사평역 3번 출구 맞은편</string>
    <string name="relatedTagExplain">예시 ) #이태원클라쓰 #박서준 #김다미</string>
    <string name="placePhotoExplain">사진을 업로드 해주세요.</string>
    <string name="complete">완료</string>
    <string name="findAddressExplain">아래와 같은 방법으로 검색을 하시면 더욱 정확한
        \n결과가 검색됩니다.</string>
    <string name="addressSign1">도로명</string>
    <string name="addressSign1Explain">예) 양화로 160, 조천읍 교래리</string>
    <string name="addressSign2">건물명</string>
    <string name="addressSign2Explain">예) 현대백화점 미아점, 경복궁</string>
    <string name="addressSign3">지역명</string>
    <string name="addressSign3Explain">예) 서귀포시 하원동, 면목동 산1-4</string>
    <string name="findAddress">주소 찾기</string>
    <string name="searchResultTitle">검색 결과</string>
    <string name="noSearchAddress">검색 결과가 없습니다.
        \n검색어를 다시 한 번 확인해주세요.</string>
    <string name="noMyPhotoReview">포토 리뷰를 올리고
        \n나만의 여행 앨범을 꾸며봐요!</string>
    <string name="noMyScrap">아직 스크랩 한 장소가 없어요.
        \n가고 싶은 장소를 스크랩해보세요!</string>
    <string name="updateComplete">수정 완료</string>
    <string name="celebPart">연예인 별</string>
    <string name="mediaPart">드라마/영화 별</string>
    <string name="SearchWordExplain">연예인, 드라마 등을 검색해주세요</string>
    <string name="noRecentSearchHistory">최근 검색어 내역이 없습니다.</string>
    <string name="recentSearch">최근 검색어</string>
    <string name="popularPhotoReview">인기 많은 포토 리뷰</string>
    <string name="visitedPlace">관련 장소를 둘러보세요!</string>
    <string name="filmSite">촬영지를 둘러보세요!</string>
    <string name="placeMore">장소 더 보기</string>
    <string name="uploadReview">업로드 하기</string>
    <string name="allowCamera">카메라 접근 권한 허용</string>
    <string name="allowCameraExplain">카메라 접근 권한 허용 후에
        \n사진을 촬영할 수 있습니다.</string>
    <string name="gallery">갤러리</string>
    <string name="example">예시</string>
    <string name="authFail">인증을 실패했습니다.</string>
    <string name="authFailCheckPw">비밀번호를 다시 입력해주세요.</string>
    <string name="PhotoReview">"포토리뷰 "</string>
    <string name="Count">개</string>
    <string name="setLanguageTitle">언어를 설정해주세요.</string>
    <string name="deletePhotoReview">포토리뷰를 삭제하시겠습니까?</string>
    <string name="deleteTxt">삭제</string>
    <string name="homePhotoReviewWarning1">아직 포토 리뷰가 없어요!\n 멋진 인증샷을 기다려볼까요?</string>
    <string name="mapPhotoReveiwEmpty">아직 포토 리뷰가 없어요! \n 멋진 인증샷을 올려보세요!</string>
    <string name="signupEmailWarning">이미 존재하는 이메일 입니다!</string>
    <string name="homePopularEmpty">조금만 기다려주세요! \n 특별한 장소를 찾아올게요!</string>
    <string name="errorReLogin">다시 로그인을 해주세요!</string>
    <string name="errorClient">오류 발생! 개발자에게 문의 해주세요.</string>
    <string name="errorNetwork">네트워크 에러가 발생하였습니다. 다시 시도해주세요.</string>
    <string name="backbuttonWarning">뒤로가기 버튼을 한번 더 누르시면 종료됩니다.</string>
    <string name="errorImg">이미지를 넣어주세요!</string>
    <string name="errorSearch">검색어를 입력해주세요!</string>
    <string name="errorSaveImg">이미지 저장에 실패했습니다.</string>
    <string name="succesSaveImg">이미지를 저장했습니다.</string>
    <string name="allowGallery">갤러리 접근 권한 허용 후에
        \n이미지를 저장할 수 있습니다.</string>
    <string name="deletePhoto">삭제되었습니다.</string>
    <string name="successUpdate">수정이 완료되었습니다.</string>
    <string name="successReport">제보해주셔서 감사합니다 :)</string>
    <string name="gpsPermittionWarning">위치 권한 설정을 해주세요.</string>
    <string name="networkWarningTitle">네트워크 연결이 끊겼습니다.</string>
    <string name="gpsWarningTitle">GPS 연결이 끊겼습니다.</string>
    <string name="networkWarningCotent">네트워크 상태를 확인해주세요. \n 문제가 계속되면 잠시 후 다시 시도해주세요.</string>
    <string name="gpsWarningContent">해당기기의 GPS가 꺼져있어 \n 위치정보를 가져올 수 없습니다. \n GPS를 사용하시겠습니까?</string>
<<<<<<< HEAD
    <string name="filter">필터</string>
=======
    <string name="nearPlaceWarning">주위에 Kravel 장소가 없어요!\n 다른 지역을 탐색해볼까요?</string>
>>>>>>> 9e5d5c834792fb8157c0aa057154283b43939eb7
</resources>
