<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.kravelteam.kravel_android.ui.signup.FinishSignUpActivity">
    
    
    <ImageView
        android:id="@+id/img_signupf_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_welcome_tiger"
        app:layout_constraintVertical_bias="0.2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_signupf_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/img_signupf_logo"
        app:layout_constraintVertical_bias="0.2">

        <TextView
            android:id="@+id/tv_signupf_title1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:text="@string/signokWelcome"
            android:textColor="@color/colorBlack"
            android:textSize="22sp"
            android:fontFamily="@font/notosans_cjk_kr_bold"
            android:includeFontPadding="false"
            app:layout_constraintBottom_toTopOf="@id/ll_signup_text"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <LinearLayout
            android:id="@+id/ll_signup_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_signupf_title1"
            app:layout_constraintVertical_chainStyle="packed">

            <TextView
                android:id="@+id/tv_signupf_title2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="12dp"
                android:fontFamily="@font/notosans_cjk_kr_regular"
                android:includeFontPadding="false"
                android:text="@string/signokWord1"
                android:textColor="#121212"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tv_signupf_title3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/signokWord2"
                android:fontFamily="@font/notosans_cjk_kr_regular"
                android:includeFontPadding="false"
                android:textColor="#121212"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tv_signupf_title4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/signupWord3"
                android:fontFamily="@font/notosans_cjk_kr_regular"
                android:includeFontPadding="false"
                android:textColor="#121212"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tv_signupf_title5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/signokWord4"
                android:fontFamily="@font/notosans_cjk_kr_regular"
                android:includeFontPadding="false"
                android:textColor="#121212"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tv_signupf_title6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/signokWord5"
                android:fontFamily="@font/notosans_cjk_kr_regular"
                android:includeFontPadding="false"
                android:textColor="#121212"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tv_signupf_title7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/signokWord6"
                android:fontFamily="@font/notosans_cjk_kr_regular"
                android:includeFontPadding="false"
                android:textColor="#121212"
                android:textSize="14sp" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>


    <TextView
        android:id="@+id/btn_signup_finish"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_marginLeft="36dp"
        android:layout_marginRight="36dp"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cl_signupf_text"
        app:layout_constraintVertical_bias="0.9"
        android:background="@drawable/signup_btn_style_true"
        android:text="@string/signokFinish"
        android:textSize="15sp"
        android:fontFamily="@font/notosans_cjk_kr_bold"
        android:includeFontPadding="false"
        android:textColor="@color/colorWhite"/>

</androidx.constraintlayout.widget.ConstraintLayout>
